boton realizar tarea - activities

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -377,7 +377,7 @@
                                 <div class="uk-margin">
                                     <label class="uk-form-label " for="verde-1"><span class="label-13">1</span></label>
                                     <div class="uk-form-controls">
-                                        <input class="uk-input" id="verde-1" type="text" placeholder="Some text..."/>
+                                        <input class="uk-input" id="verde-1m" type="text" placeholder="Some text..."/>
                                     </div>
                                 </div>
                                 <div class="uk-margin">
