--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -106,34 +106,33 @@
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-body">
-                                    <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">dato3</h6>
-                                    <p class="uk-text-small uk-text-muted ">#{tareaActvidadModelo.id}</p>
+                                    <h:form>
+                                        <h:commandButton action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
+                                    </h:form>
                                 </div>
                                 <div class="uk-card-footer">
-                                    <h:form>
-                                        <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
-                                            <div class="uk-width-expand ">
-                                                <h:commandLink action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
-                                                <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
-                                                    <div>
-                                                        <h:graphicImage  pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
-                                                    </div>
-                                                    <div>
-                                                        <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
-                                                    </div>
-                                                    <div>
-                                                        <h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
-                                                    </div>
-                                                    <div>
-                                                        <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
-                                                    </div>
-                                                    <div>
-                                                        <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" />
-                                                    </div>
-                                                </h:panelGroup>
-                                            </div>
-                                        </h:panelGroup>
-                                    </h:form>
+                                    <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
+                                        <div class="uk-width-expand ">
+
+                                            <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
+                                                <div>
+                                                    <h:graphicImage  pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
+                                                </div>
+                                                <div>
+                                                    <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
+                                                </div>
+                                                <div>
+                                                    <h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
+                                                </div>
+                                                <div>
+                                                    <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
+                                                </div>
+                                                <div>
+                                                    <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" />
+                                                </div>
+                                            </h:panelGroup>
+                                        </div>
+                                    </h:panelGroup>
                                 </div>
                             </div>
                         </h:panelGroup>
