--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -31,7 +31,6 @@
                                 <li uk-tooltip="title: #{alumno['activity']}; pos: right"><h:link outcome="tareas-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="40" alt="" /></h:link></li>
                                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="40" alt="" /></h:link></li>
                             </ul>
-
                         </div>
                     </div>
                 </nav>
@@ -43,25 +42,20 @@
                 <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img" rendered="#{true}"/>
                 <h:graphicImage library="img" name="avatar/astronauta-nina.svg" alt="" class="uk-border-circle profile-img" rendered="#{false}"/>
                 <h6 class="uk-text-center uk-margin-remove-vertical text-light nombre-usuario">#{alumnoControlador.alumnoModelo.apodo}</h6>
-
                 <div class="uk-position-relative uk-text-center uk-display-block">
-                    <!--Modificar los datos para mostrar en el Alumno-->
                     <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center uk-text-capitalize" data-uk-icon="icon: triangle-down; ratio: 0.7">#{etiqueta['menu']}</a>
-                    <!-- user dropdown -->
                     <div class="uk-dropdown user-drop" data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
                         <ul >
                             <li><a href="#" class="uk-text-capitalize">#{alumno['profile']}</a></li>
                             <li><a href="#" class="uk-text-capitalize">#{etiqueta['close.sesion']}</a></li>
                         </ul>
                     </div>
-                    <!-- /user dropdown -->
                 </div>
 
             </div>
-
             <div class="left-nav-wrap  uk-visible@xl ">
                 <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
-                    <li uk-tooltip="title: #{alumno['dashboard']}; pos: right" class="uk-active uk-text-capitalize"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
+                    <li uk-tooltip="title: #{alumno['dashboard']}; pos: right" class="uk-active"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
                     <li uk-tooltip="title: #{alumno['activity']}; pos: right"><h:link outcome="tareas-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
                     <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></h:link></li>
                 </ul>
@@ -73,7 +67,6 @@
                     <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt=""/></h:link></li>
                 </ul>
             </div>
-
         </ui:define>
         <ui:define name="contenido">
             <h:outputStylesheet library="css" name="letra.css"/>
@@ -105,7 +98,9 @@
                                 <div  uk-grid="" class="">
                                     <div class="uk-width-1-1@m uk-margin-remove-top"><div class="uk-text-center">#{alumno['dashboard.total.activities']}</div></div>
                                     <div class="uk-width-auto uk-margin-remove-top " style="font-weight: bold; color:black;" >0%</div>
-                                    <div class="uk-width-expand uk-padding-remove-left uk-margin-remove-top"><progress class="uk-progress " value="#{detalleAlumnoControlador.detalleAlumnoModelo.totalTareas}" max="5"/></div>
+                                    <div class="uk-width-expand uk-padding-remove-left uk-margin-remove-top">
+                                        <progress class="uk-progress " value="#{detalleAlumnoControlador.detalleAlumnoModelo.totalTareas}" max="5"/>
+                                    </div>
                                     <div class="uk-width-auto uk-padding-remove-left uk-margin-remove-top" style="font-weight: bold;color:black;">100%</div>
                                 </div>
                             </div>
