--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -103,8 +103,8 @@
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-body">
-                                    <h:form>
-                                        <h:commandButton action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
+                                    <h:form styleClass="tam-form">
+                                        <h:commandButton styleClass="boton" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
                                     </h:form>
                                 </div>
                                 <div class="uk-card-footer">
