--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -122,20 +122,20 @@
                     <div class="uk-width-1-1@m fondo-comic5" style="margin-left: 40px; padding: 40px 0; border: 6px solid white;">
                         <div class="uk-grid uk-child-width-1-3@m" uk-grid="">
                             <div>
-                                <div class="uk-flex uk-flex-center uk-grid"  >
-                                    <h:graphicImage styleClass="img-alumno-dashboard" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{alumno['grammar']}; pos: right"/>
+                                <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
+                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{alumno['grammar']}; pos: right"/>
                                     <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="60" max="100"/></div>
                                 </div>
                             </div>
                             <div>
-                                <div class="uk-flex uk-flex-center uk-grid" >
-                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['listening']}; pos: right "  />
+                                <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0" >
+                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['listening']}; pos: right "  />
                                     <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color2" value="60" max="100"/></div>
                                 </div>
                             </div>
                             <div>
-                                <div class="uk-flex uk-flex-center  uk-grid"  >
-                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['reading']}; pos: right "  />
+                                <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0">
+                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['reading']}; pos: right "  />
                                     <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color3" value="60" max="100"/></div>
                                 </div>
                             </div>
@@ -144,14 +144,14 @@
                     <div class="uk-width-1-1@m " style="margin-left: 40px; ">
                         <div class="uk-grid uk-child-width-1-2@m " uk-grid="">
                             <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
-                                <div class="uk-flex uk-flex-center uk-grid" >
-                                    <h:graphicImage styleClass="img-alumno-dashboard "  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['writing']}; pos: right "/>
+                                <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0">
+                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['writing']}; pos: right "/>
                                     <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color4" value="60" max="100"/></div>
                                 </div>
                             </div>
                             <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
-                                <div class="uk-flex uk-flex-center  uk-grid" >
-                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mental.map']}; pos: right "/>
+                                <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
+                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mental.map']}; pos: right "/>
                                     <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
                                 </div>
                             </div>
