se da estilo a menu actividades

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -149,9 +149,9 @@
                             <div class="imagen-ordenar">
                                 <h:graphicImage library="img" name="mounstro/whom.svg"/>
                             </div>
-                            <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center" uk-switcher="">
+                            <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center menu-ordenar" uk-switcher="">
                                 <ui:repeat value="#{gramaticaControlador.gramaticaModeloLista}" var="gramatica" varStatus="estatus">
-                                    <li><a href="#">#{estatus.index + 1}</a></li>
+                                    <li><a href="#" >#{estatus.index + 1}</a></li>
                                 </ui:repeat>
                             </ul>
                             <ul class="uk-switcher uk-margin">
