--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -51,6 +51,7 @@
                         </ul>
                     </div>
                 </div>
+
             </div>
             <div class="left-nav-wrap  uk-visible@xl ">
                 <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
@@ -69,9 +70,10 @@
         </ui:define>
         <ui:define name="contenido">
             <h:outputStylesheet library="css" name="letra.css"/>
-            <div class="uk-container margen-superior  padding-superior padding-inferior uk-border-rounded">
-                <h1 class="lescuadron letra-titulo primera-mayuscula">#{alumno['dashboard.title']}</h1>
-                <div class="uk-grid " uk-grid="">
+            <div class="uk-section margen-superior" >
+                <div class="uk-container padding-contenedor">
+                    <h1 class="lescuadron letra-titulo primera-mayuscula">#{alumno['dashboard.title']}</h1>
+                    <div class="uk-grid " uk-grid="">
 
                     <div class="uk-width-1-3@m">
                         <div class="uk-card uk-card-default color-card-dashboard-alumno border-grosor">
@@ -143,6 +145,145 @@
                                     <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
                                 </div>
                             </div>
+                        <div class="uk-width-1-3@m">
+                            <div class="uk-card uk-card-default color-card-dashboard-alumno border-grosor">
+                                <div class="uk-card-header">
+                                    <div class="uk-grid-small uk-flex-middle" uk-grid="">
+                                        <div class="uk-width-auto">
+                                            <h:graphicImage styleClass="uk-border-circle" width="50" height="50" library="img" name="mounstro/morado.svg"/>
+                                        </div>
+                                        <div class="uk-width-expand">
+                                            <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold"> #{alumnoControlador.alumnoModelo.nombre} #{alumnoControlador.alumnoModelo.apellidoPaterno} #{alumnoControlador.alumnoModelo.apellidoMaterno}</h3>
+                                            <p class="uk-text-meta uk-margin-remove-top uk-text-small"><span> #{alumnoControlador.alumnoModelo.apodo}</span></p>
+                                        </div>
+                                        <div class="uk-width-1-1@s">
+                                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.email']}:</span> #{alumnoControlador.alumnoModelo.correoPadreFamilia}</p>
+                                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top  uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.grade']}:</span> #{detalleAlumnoControlador.detalleAlumnoModelo.grado} <span class="uk-text-bold">&nbsp;Group:</span> #{detalleAlumnoControlador.detalleAlumnoModelo.grupo}</p>
+                                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-capitalize">#{alumno['dashboard.nivel']}:</span> #{alumnoControlador.alumnoModelo.nivelLenguajeModelo.valor}</p><p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold">Academic Year: </span><h:outputText value="#{detalleAlumnoControlador.detalleAlumnoModelo.inicio}"><f:convertDateTime type="date" pattern="yyyy/MM/dd"/></h:outputText> </p>
+                                            <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-primary">Edit Profile</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="uk-card-body padding-card-body">
+                                    <h3 class="uk-text-uppercase uk-text-bold">#{alumno['dashboard.homework']}</h3>
+                                    <div  uk-grid="" class="">
+                                        <div class="uk-width-1-1@m uk-margin-remove-top"><div class="uk-text-center">#{alumno['dashboard.total.activities']}</div></div>
+                                        <div class="uk-width-auto uk-margin-remove-top " style="font-weight: bold; color:black;" >0%</div>
+                                        <div class="uk-width-expand uk-padding-remove-left uk-margin-remove-top">
+                                            <progress class="uk-progress " value="#{detalleAlumnoControlador.detalleAlumnoModelo.totalTareas}" max="5"/>
+                                        </div>
+                                        <div class="uk-width-auto uk-padding-remove-left uk-margin-remove-top" style="font-weight: bold;color:black;">100%</div>
+                                    </div>
+                                </div>
+                                <div class="uk-card-footer">
+                                    <h3 class="uk-text-uppercase uk-text-bold">#{alumno['dashboard.teacher']}</h3>
+                                    <p>#{detalleAlumnoControlador.detalleAlumnoModelo.nombre} #{detalleAlumnoControlador.detalleAlumnoModelo.apellidoPaterno} #{detalleAlumnoControlador.detalleAlumnoModelo.apellidoMaterno}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-width-2-3@m">
+                            <div class="uk-section uk-border-rounded border-section uk-padding-remove color-card-dashboard-alumno" style="position:relative;padding-top:52.25%;">
+                                <div style="position:relative;padding-top:52.25%;" class="uk-margin-auto">
+                                    <iframe src="https://youtu.be/0_1NU60qHWs"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/0_1NU60qHWs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-margin-auto"><h1 class="lescuadron letra-titulo">#{alumno['dashboard.homework.done']}</h1></div>
+
+                        <div class="uk-width-1-1@m fondo-comic5" style="margin-left: 40px; padding: 40px 0; border: 6px solid white;">
+                            <div class="uk-grid uk-child-width-1-3@m" uk-grid="">
+                                <div>
+                                    <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{alumno['grammar']}; pos: right"/>
+                                        <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="60" max="100"/></div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0" >
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['listening']}; pos: right "  />
+                                        <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color2" value="60" max="100"/></div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0">
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['reading']}; pos: right "  />
+                                        <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color3" value="60" max="100"/></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="uk-width-1-1@m " style="margin-left: 40px; ">
+                            <div class="uk-grid uk-child-width-1-2@m " uk-grid="">
+                                <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
+                                    <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0">
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['writing']}; pos: right "/>
+                                        <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color4" value="60" max="100"/></div>
+                                    </div>
+                                </div>
+                                <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
+                                    <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
+                                        <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mental.map']}; pos: right "/>
+                                        <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-width-1-1@m " uk-filter="target: .js-filter" style="background-color: aqua; margin-left: 40px;">
+
+                            <ul class="uk-subnav uk-subnav-pill">
+                                <li uk-filter-control=".tag-white"><a href="#">White</a></li>
+                                <li uk-filter-control=".tag-blue"><a href="#">Blue</a></li>
+                                <li uk-filter-control=".tag-black"><a href="#">Black</a></li>
+                            </ul>
+
+                            <ul class="js-filter  uk-text-center" style="list-style: none" >
+                                <li class="tag-white">
+                                    <div class=" fondo-comic5" style=" padding: 40px 0; border: 6px solid white;">
+                                        <div class="uk-grid uk-child-width-1-3@m" uk-grid="">
+                                            <div>
+                                                <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
+                                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{alumno['grammar']}; pos: right"/>
+                                                    <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="60" max="100"/></div>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0" >
+                                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['listening']}; pos: right "  />
+                                                    <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color2" value="60" max="100"/></div>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0">
+                                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['reading']}; pos: right "  />
+                                                    <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color3" value="60" max="100"/></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class=" " style="">
+                                        <div class="uk-grid uk-child-width-1-2@m " uk-grid="">
+                                            <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
+                                                <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0">
+                                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['writing']}; pos: right "/>
+                                                    <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color4" value="60" max="100"/></div>
+                                                </div>
+                                            </div>
+                                            <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
+                                                <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
+                                                    <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mental.map']}; pos: right "/>
+                                                    <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="tag-blue">
+                                    <div class="uk-card uk-card-primary uk-card-body">Item</div>
+                                </li>
+                            </ul>
+
                         </div>
                     </div>
                 </div>
