Problemas al seleccionar actividades.

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -99,7 +99,7 @@
                                 <div class="uk-card-media-top">
                                     <h:panelGroup layout="block" pt:uk-spinner=""/>
                                     <h:panelGroup layout="block"  styleClass="uk-inline">
-                                        <div id="#{tareaActvidadModelo.idActividad}" class="videoPlayer">Hola</div>
+                                        <div id="#{tareaActvidadModelo.idActividad}" class="videoPlayer"></div>
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-body">
