--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -154,7 +154,7 @@
                                         </div>
                                     </div>
                                 </h:panelGroup>
-                                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-2@m uk-grid" pt:uk-grid="">
+                                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="">
                                     <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
                                         <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0">
                                             <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['writing']}; pos: right "/>
@@ -164,6 +164,12 @@
                                     <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
                                         <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
                                             <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mental.map']}; pos: right "/>
+                                            <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
+                                        </div>
+                                    </div>
+                                    <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
+                                        <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/naranja.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mapa-men']}; pos: right "/>
                                             <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
                                         </div>
                                     </div>
