--- a/tecolotl-web/src/main/webapp/alumno/order-sentences.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/order-sentences.xhtml
@@ -80,24 +80,27 @@
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/order-sentences.css"/>
+        <h:outputStylesheet library="css" name="letra.css"/>
         <div class="uk-section margen-superior">
-                <h1 class="lescuadron uk-margin-auto-right uk-margin-auto-left">Order Sentences</h1>
-            <h:panelGroup layout="block" styleClass="uk-container padding-contenedor uk-sortable contenedor-oraciones " pt:uk-sortable="">
-                <div class="oraciones">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, obcaecati!
-                </div>
-                <div class="oraciones">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, eius expedita illo, incidunt inventore ipsa libero natus neque quo repellendus soluta sunt tempore vel, vitae.
-                </div>
-                <div class="oraciones">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestias perferendis soluta tempore.
-                </div>
-                <div class="oraciones">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                </div>
-                <div class="oraciones">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur?
-                </div>
+                <h1 class="lescuadron uk-text-center uk-light">Order Sentences</h1>
+            <h:panelGroup layout="block" styleClass="uk-container padding-contenedor contenedor-oraciones uk-sortable "  pt:uk-sortable="">
+<!--                <h:panelGroup layout="block" styleClass="">-->
+                    <div class="oraciones">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, obcaecati!
+                    </div>
+                    <div class="oraciones">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, eius expedita illo, incidunt inventore ipsa libero natus neque quo repellendus soluta sunt tempore vel, vitae.
+                    </div>
+                    <div class="oraciones">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestias perferendis soluta tempore.
+                    </div>
+                    <div class="oraciones">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </div>
+                    <div class="oraciones">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur?
+                    </div>
+<!--                </h:panelGroup>-->
             </h:panelGroup>
 
         </div>
