se da estilo a las cajas de video,

--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -126,7 +126,7 @@
                 <div >
                     <ul class="uk-subnav uk-subnav-pill" uk-switcher="">
                         <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="actividades" varStatus="contador">
-                            <li ><a href="#">Actividad #{contador.index + 1}</a></li>
+                            <li ><a href="#" class="boton-enviar">Actividad #{contador.index + 1}</a></li>
                         </ui:repeat>
                     </ul>
 
